discord-frontend/hartex-discord-entitycache-test/tests/ui/expected_entity_attribute.stderr
error: expected `entity` attribute
  --> tests/ui/expected_entity_attribute.rs:27:7
   |
27 |     #[expected_entity_attribute]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `expected_entity_attribute` in this scope
  --> tests/ui/expected_entity_attribute.rs:27:7
   |
27 |     #[expected_entity_attribute]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
